# Color-Theme-Manager

./: .gitignore  CMakeLists.txt  README.md  app.pro  resources.qrc  wireframe.drawio
include/: OrientablePushButton.h  Theme.h  Themes.h  XMLReader.h  colorpair.h
include/Widgets/: OrientablePushButton.h  colorwidget.h  customwidget.h  mainwindow.h  menuitemwidget.h  themeitemwidget.h  themesmenuwidget.h  themewidget.h
src/: OrientablePushButton.cpp  Theme.cpp  Themes.cpp  XMLReader.cpp  colorpair.cpp  main.cpp
src/Widgets/: OrientablePushButton.cpp  colorwidget.cpp  customwidget.cpp  mainwindow.cpp  menuitemwidget.cpp  orientablepushbutton.cpp  themeitemwidget.cpp  themesmenuwidget.cpp  themewidget.cpp
ui/: colorwidget.ui  customwidget.ui  mainwindow.ui  menuitemwidget.ui  themeitemwidget.ui  themesmenuwidget.ui  themewidget.ui
